force-app/main/default/objects/RequestApproval__c/RequestApproval__c.object-meta.xml
<CustomObject>
    <label>Demande d&apos;approbation</label>
    <nameField>
        <displayFormat>DA-{0000}</displayFormat>
        <label>RequestApproval Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RequestApprovals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>