force-app/main/default/objects/RequestApproval__c/fields/Flag__c.field-meta.xml
<CustomField>
    <fullName>Flag__c</fullName>
    <label>Flag</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Frauduleux</fullName>
            </value>
            <value>
                <fullName>Douteux</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>