force-app/main/default/objects/RequestApproval__c/fields/NextApprover__c.field-meta.xml
<CustomField>
    <fullName>NextApprover__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NextApprover</label>
    <referenceTo>User</referenceTo>
    <relationshipName>RequestApprovals1</relationshipName>
    <type>Lookup</type>
</CustomField>