force-app/main/default/objects/RequestApproval__c/fields/Sinistre__c.field-meta.xml
<CustomField>
    <fullName>Sinistre__c</fullName>
    <label>Sinistre</label>
    <referenceTo>Claim__c</referenceTo>
    <relationshipLabel>RequestApprovals</relationshipLabel>
    <relationshipName>RequestApprovals</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>