force-app/main/default/objects/RequestApproval__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Créée</fullName>
            </value>
            <value>
                <fullName>Annulée</fullName>
            </value>
            <value>
                <fullName>En attente d&apos;approbation</fullName>
            </value>
            <value>
                <fullName>Rejetée</fullName>
            </value>
            <value>
                <fullName>Approuvée</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>