force-app/main/default/objects/RequestApproval__c/fields/TypeApprobation__c.field-meta.xml
<CustomField>
    <fullName>TypeApprobation__c</fullName>
    <label>Type d&apos;approbation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Flag du sinistre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>